Closed Bug 745395 Opened 12 years ago Closed 12 years ago

Replying to attached emails doesn't show the original message

Categories

(Thunderbird :: Message Compose Window, defect)

12 Branch
defect
Not set
major

Tracking

(thunderbird12+ fixed, thunderbird13 fixed)

RESOLVED FIXED
Thunderbird 14.0
Tracking Status
thunderbird12 + fixed
thunderbird13 --- fixed

People

(Reporter: squib, Assigned: mkmelin)

References

Details

(Keywords: regression)

Attachments

(2 files)

Works: 12/30/2011, broken: 12/31/2011.

If you open an attached message and try to reply to it, it shows the prelude "On x/y/z, Bob said", but doesn't actually quote the original message. Not sure what happened here...
Bug 389650 is probably related...
Keywords: regression
Hm, i think i spot the error.
Assignee: nobody → mkmelin+mozilla
Blocks: 389650
May be related to bug 743739 (for TB 11)? There are 2 issues there, but "no quoted text" seems to be one of them.
No this is from bug 389650... i misread one char there.
Attached patch proposed fixSplinter Review
One if-clause was using &... and the other ?...

This fixes it and makes it irrelevant where in the uri the param happens to be - still need to make a test for it.
I tested this out and it fixes the error for me.
Comment on attachment 615436 [details] [diff] [review]
proposed fix

David, can you take a look at this? If we want it for 12 (which is where bug 389650 landed), then we'll need to land it asap.
Attachment #615436 - Flags: review?(dbienvenu)
Comment on attachment 615436 [details] [diff] [review]
proposed fix

would be good to have a mozmill test for this.
Attachment #615436 - Flags: review?(dbienvenu) → review+
With test - i won't be able to check in until tomorrow at the earliest, so if someone wants to do that...
Attachment #615801 - Flags: review?(dbienvenu)
Comment on attachment 615801 [details] [diff] [review]
proposed fix with test

thx so much, Magnus! I'll land this today, as soon as I verify that the test passes w/ the patch. I've verified that it fails w/o it.
Attachment #615801 - Flags: review?(dbienvenu) → review+
fixed on trunk, thx, Magnus
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 14.0
Comment on attachment 615801 [details] [diff] [review]
proposed fix with test

reply, forward inline of .eml attachments won't work w/o this patch.
Attachment #615801 - Flags: approval-comm-beta?
Attachment #615801 - Flags: approval-comm-aurora?
Comment on attachment 615801 [details] [diff] [review]
proposed fix with test

a=Standard8 to fix the regression.
Attachment #615801 - Flags: approval-comm-beta?
Attachment #615801 - Flags: approval-comm-beta+
Attachment #615801 - Flags: approval-comm-aurora?
Attachment #615801 - Flags: approval-comm-aurora+
(In reply to David :Bienvenu from comment #11)
> fixed on trunk, thx, Magnus

Trunk changeset: http://hg.mozilla.org/comm-central/rev/c89cbdbd4d64
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: