Bug 745395 - Replying to attached emails doesn't show the original message. r=bienvenu